fixing z-index

--- a/my-app/src/views/home.scss
+++ b/my-app/src/views/home.scss
@@ -107,6 +107,7 @@
     }
     @media only screen and (max-width: 1024px) {
       z-index: 99;
+      height: 10vh;
     }
   }
   .search-result {
